az-aks/apps/tripviewer/tripviewer-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer-deploy
  labels:
    application: scmtripviewer
    service: tripviewerapi
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      application: scmtripviewer
      service: tripviewerapi
  template:
    metadata:
      labels:
        application: scmtripviewer
        service: tripviewerapi
    spec:
      automountServiceAccountToken: false
      containers:
        - name: application
          resources:
            requests:
              memory: '64Mi'
              cpu: '100m'
            limits:
              memory: '256Mi'
              cpu: '500m'
          ports:
            - containerPort: 8080
          image: kkdcd5acrdev.azurecr.io/tripinsights/tripviewer:1.0
          imagePullPolicy: Always
      #     volumeMounts:
      #     - name: secrets-store-inline
      #       mountPath: /mnt/secrets-store
      #       readOnly: true
      # volumes:
      # - name: secrets-store-inline
      #   csi:
      #     driver: "secrets-store.csi.k8s.io"
      #     readOnly: true
      #     volumeAttributes:
      #       providerName: "azure"
      #       usePodIdentity: "true"
      #       keyvaultName: "kkdcd6kv1dev"
      #       cloudName: ""
      #       objects:  |
      #         array:
      #           - |
      #             objectName: SQLUSER
      #             objectAlias: SQL_USER
      #             objectType: secret
      #             objectVersion: ""
      #           - |
      #             objectName: SQLPASSWORD
      #             objectAlias: SQL_PASSWORD
      #             objectType: secret
      #             objectVersion: ""
      #           - |
      #             objectName: SQLSERVER
      #             objectAlias: SQL_SERVER
      #             objectType: secret
      #             objectVersion: ""
      #       resourceGroup: "kkdcd6-common-rg"               
      #       subscriptionid: "1d11b6a5-9652-4589-a208-89bcac57ba39"
      #       tenantid: "723aa938-17e0-4144-b82c-2903de9e1337"
          # secretRef:
          #   name: keyvault-sp
          # options:
          #   keyvaultname: "kkdcd6kv1dev"
          #   keyvaultobjectnames: "SQLUSER;SQLPASSWORD;SQLSERVER"
          #   keyvaultobjecttypes: "secret;secret;secret"
          #   keyvaultobjectaliases: "SQL_USER;SQL_PASSWORD;SQL_SERVER"
          #   resourcegroup: "kkdcd6-common-rg"
          #   subscriptionid: "1d11b6a5-9652-4589-a208-89bcac57ba39"
          #   tenantid: "723aa938-17e0-4144-b82c-2903de9e1337"
