az-aks/apps/tripviewer/tripviewer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripviewerapi
  labels:
    application: scmtripviewer
    service: tripviewerapi
spec:
  type: ClusterIP
  selector:
    application: scmtripviewer
    service: tripviewerapi
  ports:
    - port: 80
      targetPort: 80
